[gd_scene load_steps=22 format=3 uid="uid://ue4ymkubpxw7"]

[ext_resource type="Texture2D" uid="uid://db2wq65lyu2a0" path="res://Images/BackGrounds/shopbg_1.png" id="1_rvgkp"]
[ext_resource type="Script" uid="uid://hvvbta65qu2b" path="res://Scripts/shop.gd" id="1_udgon"]
[ext_resource type="PackedScene" uid="uid://bmtqe3inq0rny" path="res://Scenes/upgrade_panel.tscn" id="2_ug5lb"]
[ext_resource type="Texture2D" uid="uid://c436rf8yodnlt" path="res://Images/Buttons/istockphoto-528069240-612x612-removebg-preview.png" id="3_qga71"]
[ext_resource type="Texture2D" uid="uid://hbtlue87pyqu" path="res://Images/Map/go_home_button.png" id="5_4wtlj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvgkp"]
bg_color = Color(0.690196, 0.52549, 0.317647, 0.898039)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qga71"]
bg_color = Color(0.72549, 0.6, 0.427451, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udgon"]
bg_color = Color(0.72549, 0.6, 0.427451, 0.898039)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4wtlj"]
bg_color = Color(0.546332, 0.438573, 0.288557, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ug5lb"]
bg_color = Color(0.045811, 0.664123, 0.817683, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fju5n"]
bg_color = Color(0.256, 0.256, 0.256, 0.74)
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oq6pg"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fju5n"]
texture = ExtResource("5_4wtlj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oq6pg"]
texture = ExtResource("5_4wtlj")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ans6d"]
texture = ExtResource("5_4wtlj")
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0own"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmcs0"]

[sub_resource type="Animation" id="Animation_4wtlj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GoToShop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_udgon"]
resource_name = "closeScene"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/AnimateParts/Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.596313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(834, 0), Vector2(640, 365), Vector2(640, 365)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/AnimateParts/Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.596313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-36, -25), Vector2(0, 0), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/AnimateParts/Panel:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.596313),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.523599, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/AnimateParts/Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/GoToShop:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.050000012),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ans6d"]
resource_name = "openScene"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/AnimateParts/Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.196313, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(640, 365), Vector2(640, 365), Vector2(834, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/AnimateParts/Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.196313, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(-36, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/AnimateParts/Panel:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.196313, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.523599]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/AnimateParts/Panel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/GoToShop:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u0own"]
_data = {
&"RESET": SubResource("Animation_4wtlj"),
&"closeScene": SubResource("Animation_udgon"),
&"openScene": SubResource("Animation_ans6d")
}

[node name="Shop" type="Node2D"]
script = ExtResource("1_udgon")

[node name="BackGroundSprite2D" type="Sprite2D" parent="."]
position = Vector2(326, 177)
texture = ExtResource("1_rvgkp")

[node name="MainSNode2D" type="Node2D" parent="."]

[node name="UpgradeShopPanel" type="Panel" parent="MainSNode2D"]
offset_left = 28.0
offset_top = 55.0
offset_right = 612.0
offset_bottom = 275.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rvgkp")

[node name="ScrollContainer" type="ScrollContainer" parent="MainSNode2D/UpgradeShopPanel"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 563.0
offset_bottom = 276.0
vertical_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="MainSNode2D/UpgradeShopPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
columns = 100

[node name="UpgradePanel" parent="MainSNode2D/UpgradeShopPanel/ScrollContainer/GridContainer" instance=ExtResource("2_ug5lb")]
layout_mode = 2
max_level = 8

[node name="UpgradePanel2" parent="MainSNode2D/UpgradeShopPanel/ScrollContainer/GridContainer" instance=ExtResource("2_ug5lb")]
layout_mode = 2
upgrade_type = 1

[node name="UpgradePanel3" parent="MainSNode2D/UpgradeShopPanel/ScrollContainer/GridContainer" instance=ExtResource("2_ug5lb")]
layout_mode = 2
upgrade_type = 2

[node name="ItemShopPanel" type="Panel" parent="MainSNode2D"]
visible = false
offset_left = 28.0
offset_top = 55.0
offset_right = 612.0
offset_bottom = 351.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rvgkp")

[node name="ButtonsFlowContainer" type="HFlowContainer" parent="MainSNode2D"]
offset_left = 60.0
offset_top = 27.0
offset_right = 580.0
offset_bottom = 57.0
theme_override_constants/h_separation = 15
alignment = 1
last_wrap_alignment = 2

[node name="UpgradeShopButton" type="Button" parent="MainSNode2D/ButtonsFlowContainer"]
visible = false
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qga71")
theme_override_styles/pressed = SubResource("StyleBoxFlat_udgon")
theme_override_styles/hover = SubResource("StyleBoxFlat_4wtlj")
theme_override_styles/focus = SubResource("StyleBoxFlat_ug5lb")
text = "Upgrades"

[node name="ItemsShopButton" type="Button" parent="MainSNode2D/ButtonsFlowContainer"]
visible = false
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_qga71")
theme_override_styles/pressed = SubResource("StyleBoxFlat_udgon")
theme_override_styles/hover = SubResource("StyleBoxFlat_4wtlj")
theme_override_styles/focus = SubResource("StyleBoxFlat_ug5lb")
text = "Items"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UpPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.086
offset_left = 547.0
offset_bottom = 0.03999901
theme_override_styles/panel = SubResource("StyleBoxFlat_fju5n")

[node name="CoinsInfo" type="Node2D" parent="CanvasLayer/UpPanel"]
position = Vector2(7, 5)

[node name="CoinIconTextureRect" type="TextureRect" parent="CanvasLayer/UpPanel/CoinsInfo"]
offset_left = 1.0
offset_top = 1.0
offset_right = 19.0
offset_bottom = 19.0
texture = ExtResource("3_qga71")
expand_mode = 3

[node name="CoinInfoTextLabel" type="RichTextLabel" parent="CanvasLayer/UpPanel/CoinsInfo"]
offset_left = 20.0
offset_top = -1.0
offset_right = 116.0
offset_bottom = 21.0
theme_override_font_sizes/normal_font_size = 13
theme_override_font_sizes/bold_font_size = 13
theme_override_font_sizes/bold_italics_font_size = 13
theme_override_font_sizes/italics_font_size = 13
theme_override_font_sizes/mono_font_size = 13
bbcode_enabled = true
text = "$312
"
vertical_alignment = 1

[node name="AnimateParts" type="Node2D" parent="CanvasLayer"]

[node name="Panel" type="Panel" parent="CanvasLayer/AnimateParts"]
offset_right = 640.0
offset_bottom = 365.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oq6pg")

[node name="GoToShop" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.011000001
anchor_top = 0.011000001
anchor_right = 0.07700001
anchor_bottom = 0.128
offset_left = -0.04000044
offset_top = 0.039999723
offset_right = -0.2800064
offset_bottom = -0.08000183
theme_override_styles/normal = SubResource("StyleBoxTexture_fju5n")
theme_override_styles/pressed = SubResource("StyleBoxTexture_oq6pg")
theme_override_styles/hover = SubResource("StyleBoxTexture_ans6d")
theme_override_styles/disabled = SubResource("StyleBoxFlat_u0own")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fmcs0")

[node name="Info" type="RichTextLabel" parent="CanvasLayer/GoToShop"]
layout_mode = 0
offset_left = 3.0
offset_top = 38.0
offset_right = 39.0
offset_bottom = 49.0
theme_override_font_sizes/normal_font_size = 7
text = "Go Home"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u0own")
}

[connection signal="button_down" from="CanvasLayer/GoToShop" to="." method="_on_go_to_shop_button_down"]
